--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage</title>
+    <title>HomePg1</title>
 </head>
 <body>
     <div>
@@ -35,9 +35,13 @@
       </button>
 </form>
 </div>
-<img src="#" alt="icon">
+<div>
+    img src="#" alt="icon">
 <div>Sign in to streamline your search</div>
 <div>Save properties, create alerts and keep track of the enquiries you send to agents.</div>
 <div>Sign in or create account</div>
+
+</div>
+
 </body>
 </html>
